added more temp images and working on quiz activity

--- a/prototype/app/src/main/res/values/strings.xml
+++ b/prototype/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Make-A-Story-Prototype</string>
     <string name="category_image">category image</string>
     <string name="food">Food</string>
+    <string name="button">Button</string>
+    <string name="word_image">Word image</string>
 </resources>
