Added Make-A-Story app logo and a home screen that contains the logo and 2 buttons. The buttons redirect to "Word Bank" and "Stories" pages, and the connection is not implemented yet. Added texts on buttons to strings.xml as variables.

--- a/prototype/app/src/main/res/values/strings.xml
+++ b/prototype/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="food">Food</string>
     <string name="button">Button</string>
     <string name="word_image">Word image</string>
+    <string name="word_bank">Word Bank</string>
+    <string name="stories">Stories</string>
+    <string name="logo_description">Logo for the Make-A-Story app.</string>
 </resources>
