Created story selection screen. Added 4 existing story images to drawable and created a simple 2x2 grid on the  story selection screen. Will enhance the view by adding text under the pictures. Considering to change the layout of the story selection screen to have horizontal cards instead of 2 columns.

--- a/prototype/app/src/main/res/values/strings.xml
+++ b/prototype/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="stories">Stories</string>
     <string name="logo_description">Logo for the Make-A-Story app.</string>
     <string name="test">test</string>
+    <string name="special_invention_image_description">This is the illustration for story The Special Invention</string>
+    <string name="santas_elf_image_description">Santa\'s Mixedup helper elf image.</string>
     <string-array name="categoryNames">
         <item>Toys</item>
         <item>Food</item>
