--- a/prototype/app/src/main/res/values/strings.xml
+++ b/prototype/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="test">test</string>
     <string name="special_invention_image_description">This is the illustration for story The Special Invention</string>
     <string name="santas_elf_image_description">Santa\'s Mixedup helper elf image.</string>
+    <string name="space_alien_image_description">space_alien_image_description</string>
+    <string name="wacky_costume_party_image_description">wacky_costume_party_image_description</string>
     <string-array name="categoryNames">
         <item>Toys</item>
         <item>Food</item>
