--- a/prototype/app/src/main/res/values/strings.xml
+++ b/prototype/app/src/main/res/values/strings.xml
@@ -13,6 +13,11 @@
     <string name="santas_elf_image_description">Santa\'s Mixedup helper elf image.</string>
     <string name="space_alien_image_description">space_alien_image_description</string>
     <string name="wacky_costume_party_image_description">wacky_costume_party_image_description</string>
+    <string name="the_special_invention_text">The Special Invention</string>
+    <string name="space_alien_text">the_space_alien_text</string>
+    <string name="the_wacky_costume_party_text">The Wacky Costume Party</string>
+    <string name="the_space_alien_text">The Space Alien</string>
+    <string name="the_space_alien">The Space Alien</string>
     <string-array name="categoryNames">
         <item>Toys</item>
         <item>Food</item>
