--- a/prototype/app/src/main/res/values/strings.xml
+++ b/prototype/app/src/main/res/values/strings.xml
@@ -80,14 +80,25 @@
         <item>tea</item>
     </string-array>
     <string-array name="goodJobMessages">
-        <item>Good job!</item>
-        <item>Fantastic!</item>
-        <item>Way to go!</item>
-        <item>Nice job!</item>
-        <item>Awesome!</item>
-        <item>You got it!</item>
-        <item>Super!</item>
         <item>Excellent!</item>
+        <item>Awesome!</item>
+        <item>Good job!</item>
+        <item>Magnificent!</item>
+        <item>You did really well!</item>
+        <item>Outstanding!</item>
+        <item>Super job!</item>
+        <item>Splendid!</item>
+        <item>You really know your stuff!</item>
+        <item>Marvelous!</item>
+        <item>Superb!</item>
+        <item>Brilliant!</item>
+        <item>You get smarter all the time!</item>
+        <item>How did you get so smart?</item>
+        <item>Terrific!</item>
+        <item>Tremendous!</item>
+        <item>Way to go!</item>
+        <item>You sure know a lot of words!</item>
+        <item>You're a really brainy kid!</item>
     </string-array>
     <string-array name="tryAgainMessages">
         <item>Try again.</item>
