--- a/prototype/app/src/main/res/values/strings.xml
+++ b/prototype/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="wordbank_image_description">image of word bank that leads to quizzes</string>
     <string name="stories_image_description">image of stories that leads to main story</string>
     <string name="story_image">story image</string>
+    <string name="replay_button">Replay button</string>
+    <string name="play_button">Play button</string>
+    <string name="pause_button">Pause button</string>
     <string-array name="categoryNames">
         <item>Toys</item>
         <item>Food</item>
