--- a/prototype/app/src/main/res/values/strings.xml
+++ b/prototype/app/src/main/res/values/strings.xml
@@ -43,48 +43,49 @@
         <item>car</item>
     </string-array>
     <string-array name="FoodWords">
-        <item>apple</item>
-        <item>bread</item>
-        <item>burger</item>
+<!--        <item>apple</item>-->
+<!--        <item>bread</item>-->
+<!--        <item>burger</item>-->
         <item>cake</item>
         <item>candy</item>
-        <item>carrots</item>
-        <item>cone</item>
+<!--        <item>carrots</item>-->
+<!--        <item>cone</item>-->
         <item>cookies</item>
         <item>corn</item>
         <item>grapes</item>
-        <item>hotdog</item>
-        <item>lettuce</item>
-        <item>milk</item>
-        <item>nuts</item>
+<!--        <item>hotdog</item>-->
+        <item>hamburger</item>
+<!--        <item>lettuce</item>-->
+<!--        <item>milk</item>-->
+<!--        <item>nuts</item>-->
         <item>nuts</item>
         <item>pie</item>
         <item>plum</item>
         <item>pretzel</item>
-        <item>snack</item>
-        <item>tea</item>
+<!--        <item>snack</item>-->
+<!--        <item>tea</item>-->
     </string-array>
     <string-array name="WordList">
-        <item>apple</item>
-        <item>bread</item>
-        <item>burger</item>
+<!--        <item>apple</item>-->
+<!--        <item>bread</item>-->
+<!--        <item>burger</item>-->
         <item>cake</item>
         <item>candy</item>
-        <item>carrots</item>
-        <item>cone</item>
+<!--        <item>carrots</item>-->
+<!--        <item>cone</item>-->
         <item>cookies</item>
         <item>corn</item>
         <item>grapes</item>
-        <item>hotdog</item>
-        <item>lettuce</item>
-        <item>milk</item>
-        <item>nuts</item>
+        <item>hamburger</item>
+<!--        <item>lettuce</item>-->
+<!--        <item>milk</item>-->
+<!--        <item>nuts</item>-->
         <item>nuts</item>
         <item>pie</item>
         <item>plum</item>
         <item>pretzel</item>
-        <item>snack</item>
-        <item>tea</item>
+<!--        <item>snack</item>-->
+<!--        <item>tea</item>-->
     </string-array>
     <string-array name="goodJobMessages">
         <item>Excellent!</item>
