Resolved some inspection errors/warnings

--- a/prototype/app/src/main/res/values/strings.xml
+++ b/prototype/app/src/main/res/values/strings.xml
@@ -3,19 +3,30 @@
     <string name="category_image">category image</string>
     <string name="food">Food</string>
     <string name="button">Button</string>
+    <string name="confirmButtonDescription">green confirm button</string>
+    <string name="cancelButtonDescription">red cancel button</string>
+    <string name="charGuideDescription">friendly book character</string>
+    <string name="speechBubbleDescription">speech bubble</string>
+    <string name="speakerIconDescription">repeat audio</string>
+    <string name="star1Description">achievement star 1</string>
+    <string name="star2Description">achievement star 2</string>
+    <string name="star3Description">achievement star 3</string>
     <string name="word_image">Word image</string>
     <string name="word_bank">Word Bank</string>
     <string name="stories">Stories</string>
     <string name="characters">Characters</string>
     <string name="logo_description">Logo for the Make-A-Story app.</string>
     <string name="test">test</string>
-    <string name="special_invention_image_description">This is the illustration for story The Special Invention</string>
     <string name="santas_elf_image_description">Santa\'s Mixedup helper elf image.</string>
     <string name="space_alien_image_description">space_alien_image_description</string>
+    <string name="special_invention_image_description">This is the illustration for story The Special Invention</string>
     <string name="wacky_costume_party_image_description">wacky_costume_party_image_description</string>
     <string name="the_special_invention_text">The Special Invention</string>
+    <string name="the_special_invention_content_description">The Special Invention story text</string>
     <string name="space_alien_text">the_space_alien_text</string>
+    <string name="space_alien_content_description">space alien story text</string>
     <string name="the_wacky_costume_party_text">The Wacky Costume Party</string>
+    <string name="the_wacky_costume_party_content_description">The Wacky Costume Party story text</string>
     <string name="the_space_alien_text">The Space Alien</string>
     <string name="the_space_alien">The Space Alien</string>
     <string name="friends_image_description">image of friends that leads to character screen</string>
